feat: Implement Universe-based isolation for concurrent playthroughs
- Introduced Universe and WrestlerState entities to decouple playthrough progress from static templates.
- Refactored Injury, Title, Faction, Team, DramaEvent, Campaign, and Show to be universe-scoped.
- Implemented UniverseContextService and added a Universe selector to the MainLayout for session-scoped context switching.
- Updated core services and UI views to be universe-aware, ensuring isolated progression for fans, health, and tiers.
- Migrated pre-refactor data into a 'Default Universe' (ID 1) via Flyway migrations.
- Resolved compilation errors and restored project-standard Slf4j/Lombok usage.